k8s/ingress-argo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/ip-address-type: dualstack
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: argocd.<YOUR_DOMAIN>
  finalizers:
  - ingress.k8s.aws/resources
  name: argocd-ingress
  namespace: argocd
spec:
  tls:
    - hosts:
        - argocd.<YOUR_DOMAIN>
  defaultBackend:
    service:
      name: argo-cd-argocd-server
      port:
        number: 443
  ingressClassName: alb
